# hotspot-website

./: Dockerfile  README.md  START_GUIDE.md  app.py  check_python.bat  check_python.sh  check_python_fixed.bat  config.py  docker-compose.yml  pyproject.toml  requirements.txt  requirements_simple.txt  run.bat  run.sh  run_improved.bat  setup.py  test_python.py  test_simple.py  vercel.json  手动检查Python环境.txt
crawler/: __init__.py  base_crawler.py  manager.py  news_crawler.py  social_crawler.py  yuguo_crawler.py
database/: __init__.py  db_manager.py  models.py
scheduler/: __init__.py  tasks.py
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  index.html
utils/: __init__.py  scorer.py  text_cleaner.py
