[project]
name = "hotspot-website"
version = "1.0.0"
description = "Hotspot website for tracking trending topics"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "Flask==2.3.3",
    "Flask-SQLAlchemy==3.0.5",
    "requests==2.31.0",
    "beautifulsoup4==4.12.2",
    "lxml==4.9.3",
    "APScheduler==3.10.4",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "pandas==2.0.3",
    "numpy==1.24.3",
    "Jinja2==3.1.2",
    "Werkzeug==2.3.7",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"